# mb-django-demo

./: .env.example  .gitignore  README.md  film_db.sqlite3  manage.py  pyproject.toml
csfdtop/: admin.py  apps.py  models.py  scraping.py  urls.py  utils.py  views.py
csfdtop/management/commands/: scrape.py
csfdtop/migrations/: 0001_initial.py  0002_actor_name_normalized_film_name_normalized.py
csfdtop/scraping/: fetching.py  parsing.py  persistence.py  scraping.py
docs/: DECISIONS.md
docs/adr/: ADR-001 Use BeautifulSoup instead of Scrapy.md  ADR-002 Use Playwright instead of requests and aiohttp.md
mb_django_demo/: asgi.py  settings.py  urls.py  wsgi.py
templates/csfdtop/: actor_detail.html  base.html  film_detail.html  index.html
tests/scraping/: test_create_actor_and_add_normalized_name.py  test_fetch_film_actors.py  test_get_actors.py  test_get_basic_film_infos.py  test_get_film_basic_info.py  test_get_film_list.py  test_get_page_content.py  test_get_pagination.py  test_process_toplist_url.py  test_run_scraping.py  test_save_results.py
tests/scraping/fetching/: test_fetch_film_actors.py  test_get_actors.py  test_get_basic_film_infos.py  test_get_page_content.py  test_process_toplist_url.py
tests/scraping/parsing/: test_get_film_basic_info.py  test_get_film_list.py  test_get_pagination.py  test_process_actor_element.py
tests/scraping/persistence/: test_create_actor_and_add_normalized_name.py  test_create_film_and_add_normalized_name.py  (+2 more)
tests/utils/: test_get_name_year_hash.py  test_normalize_text.py
tests/views/: test_search_api.py
(+1 files in other folders)
