[project]
name = "mb-django-demo"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.13.3",
    "beautifulsoup4>=4.14.3",
    "django>=6.0.2",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-django>=4.12.0",
    "ruff>=0.15.4",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "mb_django_demo.settings"
python_files = ["tests/*/test_*.py"]
